# PerturbomeAI

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: pipeline.yaml
docs/: methods.md  usage.md
hpc/: 00_assign_8fold.py  01_build_block_cache.py  02_train_block_fold.py  03_score_block_oof.py  04_align_merge.py  README.md
hpc/hpc_lib/: __init__.py  block_cache.py  cohort.py  gpu_pool.py  paths.py  throughput.py
hpc/scripts/: env.sh  run_all_shards_pipeline.sh  run_demo.sh  run_gpu_pool.sh
methods-paper/: methods.txt  paper-draft.txt
perturbomeai/: __init__.py  ablation.py  align.py  features.py  folds.py  metrics.py  preprocess.py  proteomics.py  scorer.py  simdata.py  vae_impute.py
scripts/: _pipeline.py  ablation.py  impute.py  proteomics.py  run_demo.py  score.py
simulation/: README.md
simulation/config/: default.yaml  variants.yaml
simulation/scripts/: plot_config_figures.py  run_all.sh  run_module.py
simulation/src/: __init__.py  config_loader.py  experiments.py  features.py  generative.py  inference.py  metrics.py  plots.py  score_align.py  theory.py
